# unimrcp

./: .editorconfig  .editorconfig.inferred  CMakeLists.txt  README  configure.ac  unimrcp-2010.sln
conf/: unimrcpserver.xml
libs/: Makefile.am
libs/apr-toolkit/: aprtoolkit.vcxproj
libs/curl_x86-windows/: CONTROL
libs/curl_x86-windows/lib/: libcurl.lib
libs/json-c/include/: config.h
libs/json-c/lib/: json-c-static.lib  json-c.exp  json-c.lib
libs/libuv_x86-windows/: CONTROL
libs/libwebsockets_x86-windows/: CONTROL
libs/libwebsockets_x86-windows/include/: lws_config.h
libs/libwebsockets_x86-windows/lib/: websockets.lib
libs/mpf/: CMakeLists.txt  mpf.vcxproj
libs/mpf/src/: mpf_activity_detector.c  mpf_bridge.c
libs/mrcp/: mrcp.vcxproj
libs/mrcp-client/: mrcpclient.vcxproj
libs/mrcp-engine/: mrcpengine.vcxproj
libs/mrcp-engine/src/: mrcp_engine_loader.c
libs/mrcp-server/: mrcpserver.vcxproj
libs/mrcp-server/src/: mrcp_server.c
libs/mrcp-signaling/: mrcpsignaling.vcxproj
libs/mrcpv2-transport/: mrcpv2transport.vcxproj
libs/openssl_x86-windows/: CONTROL
libs/pthreads_x86-windows/: BUILD_INFO  CONTROL
libs/pthreads_x86-windows/lib/: pthreadVC3.lib  pthreadVCE3.lib  pthreadVSE3.lib
libs/uni-rtsp/: unirtsp.vcxproj
libs/webrtcvad/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  CMakeLists.txt  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  vad.sln  vad.vcxproj  vad.vcxproj.filters
libs/webrtcvad/webrtc/common_audio/signal_processing/: complex_bit_reverse.c  complex_fft.c  cross_correlation.c  division_operations.c  downsample_fast.c  energy.c  get_scaling_square.c  min_max_operations.c  real_fft.c  resample_48khz.c  resample_by_2_internal.c  resample_fractional.c  spl_init.c  vector_scaling_operations.c
libs/webrtcvad/webrtc/common_audio/signal_processing/include/: real_fft.h  signal_processing_library.h  spl_inl.h
libs/webrtcvad/webrtc/common_audio/vad/: vad_core.c  vad_core.h  vad_filterbank.c  vad_gmm.c  vad_sp.c  vad_sp.h  webrtc_vad.c
libs/webrtcvad/webrtc/common_audio/vad/include/: webrtc_vad.h
libs/webrtcvad/webrtc/system_wrappers/interface/: cpu_features_wrapper.h
libs/zlib_x86-windows/: CONTROL
libs/zlib_x86-windows/lib/: zlib.lib
modules/: Makefile.am
modules/mrcp-sofiasip/: mrcpsofiasip.vcxproj
modules/mrcp-unirtsp/: mrcpunirtsp.vcxproj
plugins/: Makefile.am
plugins/demo-recog/: demorecog.vcxproj
plugins/demo-recog/src/: demo_recog_engine.c
plugins/demo-synth/: demosynth.vcxproj
plugins/demo-verifier/: demoverifier.vcxproj
plugins/funasr-recog/: CMakeLists.txt  Makefile.am  funasrrecog.aps  funasrrecog.vcproj  funasrrecog.vcxproj  funasrrecog.vcxproj.filters  resource.h
plugins/mrcp-recorder/: mrcprecorder.vcxproj
test1/: resource.h  test1.aps  test1.c  test1.cbb  test1.vcxproj  test1.vcxproj.filters
tests/apttest/: apttest.vcxproj
tests/mpftest/: mpftest.vcxproj
tests/mrcptest/: mrcptest.vcxproj
tests/rtsptest/: rtsptest.vcxproj
tests/strtablegen/: strtablegen.vcxproj
(+47 files in other folders)
